deploy/manifests/roomservice-dapr.yaml
apiVersion: v1
kind: Service
metadata:
  name: roomservice-service
spec:
  type: ClusterIP
  ports:
    - port: 5005
      targetPort: 5005
  selector:
    app: roomservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roomservice-deployment
  labels:
    app: register-service
    platform: aks
    environment: dev
    release: cassiopeia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roomservice
  template:
    metadata:
      labels:
        app: roomservice
      annotations:
        dapr.io/app-id: roomservice
        dapr.io/app-port: "5005"
        dapr.io/enable-api-logging: "true"
        dapr.io/enabled: "true"
        dapr.io/log-level: debug
    spec:
      containers:
        - name: roomservice
          image: ghcr.io/jacqinthebox/escaperooms/roomservice:1.0.55
          ports:
            - containerPort: 5005
