deploy/manifests/ingress-csp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "no-referrer, strict-origin" always;
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval';" always;
      add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
  name: escaperoom-ingress
  namespace: escape
spec:
  rules:
  - host: escaperooms.dev.boringtestdomain.nl
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: registerservice-service
            port:
              number: 5000
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - escaperooms.dev.boringtestdomain.nl
    secretName: escaperooms-dev-tls
