deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escaperoom-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: registerservice-service
            port:
              number: 5000
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: roomservice-service
            port:
              number: 5005
        path: /room/
        pathType: Prefix
      - backend:
          service:
            name: scoreservice-service
            port:
              number: 5006
        path: /score/
        pathType: Prefix
